Improving crawling. Fixes few code smells.